# SoftLEGS-ROS_Package

./: .gitignore  README.md
src/Opto_Wrench_Sensors/opto_example/: CMakeLists.txt  CTestTestfile.cmake  Makefile  ReadMe.txt  cmake_install.cmake  package.xml
src/Opto_Wrench_Sensors/opto_single_wrench/: CMakeLists.txt  package.xml
src/Opto_Wrench_Sensors/opto_wrenches/: CMakeLists.txt  force_sensor_ati.kdev4  package.xml
src/Qb_Legs_Synergies/distance_sensor/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  package.xml
src/Qb_Legs_Synergies/imu_management/: CMakeLists.txt  package.xml
src/Qb_Legs_Synergies/legs_description/: CMakeLists.txt  package.xml
src/Qb_Legs_Synergies/optimal_walk/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  package.xml
src/Qb_Legs_Synergies/optimal_walk_gui/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  package.xml
src/Qb_Legs_Synergies/push_recovery_ctrl/: CMakeLists.txt  (+1 more)
src/Qb_Legs_Synergies/qb_frank_controller/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
src/Qb_Legs_Synergies/qb_frank_controller/catkin_generated/: package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py
src/Qb_Legs_Synergies/qb_frank_controller/catkin_generated/installspace/: qb_frank_controller.pc  qb_frank_controllerConfig.cmake
src/Qb_Legs_Synergies/qb_frank_controller/src/: qb_frank_controller_full.cpp  qb_frank_controller_test_full.cpp  qb_frank_controller_test_left.cpp  qb_frank_controller_test_pub.cpp  qb_frank_controller_test_right.cpp
src/logitech_ctrl/: CMakeLists.txt  package.xml
src/phidgets_interface_kit/: CMakeLists.txt  README.md
(+1164 files in other folders)
